<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/sprout_main"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_sprout1"
        app:lottie_autoPlay="true"
        app:lottie_fileName="walking-plant.json"
        app:lottie_loop="true" />

    <LinearLayout
        android:id="@+id/linearLayout_sprout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menubtn">

        <TextView
            android:id="@+id/todayText"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nbold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/until_today"
            android:textColor="@color/mintGreen"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/savingText_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nregular"
            android:includeFontPadding="false"
            android:text="@string/const_guide"
            android:textColor="@color/mainGreen"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/estimateText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nbold"
                android:gravity="end"
                android:includeFontPadding="false"
                android:text="@string/savings"
                android:textColor="@color/mainGreen"
                android:textSize="60sp"
                android:layout_weight="3"/>

            <TextView
                android:id="@+id/constText_gram"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nbold"
                android:gravity="start"
                android:includeFontPadding="false"
                android:text="@string/const_unit"
                android:textColor="@color/mainGreen"
                android:textSize="24sp"
                android:layout_weight="2"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/menubtn"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/menu"
        android:backgroundTint="@color/mintGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--기록 버튼-->

    <android.widget.Button
        android:id="@+id/recordbtn"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/recordfloating"
        android:onClick="recordButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout_sprout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sprout_main">

        <TextView
            android:id="@+id/level_main"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nregular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/level_of_sprout"
            android:textColor="@color/mintGreen"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/sproutName_main"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nbold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/name_of_sprout"
            android:textColor="@color/mintGreen"
            android:textSize="24sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>