<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!--android:fontFamily="@font/notoregular"-->
    <!--android:fontFamily="@font/notoregular"-->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/backBtn_start"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/backward_arrow"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/title_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/nbold"
            android:includeFontPadding="false"
            android:text="@string/title_start"
            android:textColor="@color/mainGreen"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/greeting_login1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nbold"
            android:includeFontPadding="false"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/mainGreen"
            android:textSize="24sp"
            android:layout_marginBottom="16dp"/>

        <!--간단한 로고 등 이미지 제작 후 넣을 예정-->
        <ImageView
            android:id="@+id/greetingImageview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/tempimage"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/greeting_login2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nregular"
            android:includeFontPadding="false"
            android:text="@string/greeting_ment"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/nextbtn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:autofillHints="get username"
            android:background="@drawable/inputfield0"
            android:ems="10"
            android:fontFamily="@font/nregular"
            android:hint="@string/your_nick"
            android:includeFontPadding="false"
            android:inputType="textPersonName"
            android:textAlignment="textStart"
            android:textColor="@color/almostBlack"
            android:textColorHint="@color/subGreen"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextSproutName"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:background="@drawable/inputfield1"
            android:ems="10"
            android:hint="@string/your_sprout"
            android:includeFontPadding="false"
            android:inputType="textPersonName"
            android:textColor="@color/almostBlack"
            android:textColorHint="@color/mainGreen"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/nextbtn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/mainbutton"
        android:fontFamily="@font/nbold"
        android:includeFontPadding="false"
        android:text="@string/start"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>