<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/main_sprout_linear_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:background="@drawable/backgroundrec2"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/todayText"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nbold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/until_today"
                    android:textColor="@color/mintGreen"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/savingText_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nregular"
                    android:includeFontPadding="false"
                    android:text="@string/const_guide"
                    android:textColor="@color/mainGreen"
                    android:textSize="28sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/estimateText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:fontFamily="@font/nbold"
                        android:gravity="end"
                        android:includeFontPadding="false"
                        android:text="@string/savings"
                        android:textColor="@color/mainGreen"
                        android:textSize="48sp" />

                    <TextView
                        android:id="@+id/constText_gram"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/nbold"
                        android:gravity="start"
                        android:includeFontPadding="false"
                        android:text="@string/const_unit"
                        android:textColor="@color/mainGreen"
                        android:textSize="24sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/backgroundrec2"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="16dp">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/sprout_main"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout_sprout1"
                    app:lottie_autoPlay="true"
                    app:lottie_fileName="walking-plant.json"
                    app:lottie_loop="true" />

                <LinearLayout
                    android:id="@+id/linearLayout_sprout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sprout_main">

                    <TextView
                        android:id="@+id/level_main"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nregular"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:text="@string/level_of_sprout"
                        android:textColor="@color/mintGreen"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/sproutName_main"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nbold"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:text="@string/name_of_sprout"
                        android:textColor="@color/mintGreen"
                        android:textSize="28sp" />
                </LinearLayout>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:background="@drawable/backgroundrec2">

                <TextView
                    android:id="@+id/textView2"
                    style="@style/TextBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="기록하기"
                    android:textColor="@color/almostBlack"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/home_button_to_meal"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/icon_recordmeal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <ImageButton
                    android:id="@+id/home_button_to_habit"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/icon_recordaction"
                    app:layout_constraintEnd_toStartOf="@+id/home_button_to_walk"
                    app:layout_constraintStart_toEndOf="@+id/home_button_to_meal"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <ImageButton
                    android:id="@+id/home_button_to_walk"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/icon_recordwalk"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>