<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/page6" />

    <LinearLayout
        android:id="@+id/linearLayout_mysprout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.widget.Button
            android:id="@+id/backBtn_mysprout"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/backward_arrow"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/pagename_mysprout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/nbold"
            android:includeFontPadding="false"
            android:text="@string/mysprout_pagename_str"
            android:textColor="@color/mainGreen"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/mysprout_sprout_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nbold"
        android:includeFontPadding="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/mysprout_sprout_level"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView8"
        app:layout_constraintVertical_bias="0.96" />

    <TextView
        android:id="@+id/mysprout_sprout_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/nbold"
        android:includeFontPadding="false"
        android:text="@string/mysprout_level_str"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="360dp"
        android:layout_height="144dp"
        android:layout_marginTop="248dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/mysprout_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/nbold"
            android:includeFontPadding="false"
            android:text="@string/mysprout_today_str"
            android:textColor="@color/mainGreen"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mysprout_today_walk_carbon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/nbold"
            android:includeFontPadding="false"
            android:text="10.0g"
            android:textColor="@color/mainGreen"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mysprout_today_action_carbon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/nbold"
            android:includeFontPadding="false"
            android:text="10.0g"
            android:textColor="@color/mainGreen"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/mysprout_today_food_carbon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mysprout_today_walk_carbon" />

        <TextView
            android:id="@+id/mysprout_today_food_carbon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/nbold"
            android:includeFontPadding="false"
            android:text="10.0g"
            android:textColor="@color/mainGreen"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/mysprout_today_walk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/nbold"
            android:includeFontPadding="false"
            android:text="0 걸음"
            android:textColor="@color/grey"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/mysprout_today_walk_carbon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mysprout_today_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/nbold"
            android:includeFontPadding="false"
            android:text="0 가지"
            android:textColor="@color/grey"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/mysprout_today_food"
            app:layout_constraintEnd_toStartOf="@+id/mysprout_today_action_carbon"
            app:layout_constraintTop_toBottomOf="@+id/mysprout_today_walk" />

        <TextView
            android:id="@+id/mysprout_today_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/nbold"
            android:includeFontPadding="false"
            android:text="0 회"
            android:textColor="@color/grey"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/mysprout_today_food_carbon" />

        <TextView
            android:id="@+id/mysprout_today_walk_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/nbold"
            android:includeFontPadding="false"
            android:text="걸음 수"
            android:textColor="@color/grey"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mysprout_today_action_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/nbold"
            android:includeFontPadding="false"
            android:text="습관 기록"
            android:textColor="@color/grey"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/mysprout_today_food_str"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mysprout_today_walk_str"
            app:layout_constraintVertical_bias="0.071" />

        <TextView
            android:id="@+id/mysprout_today_food_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/nbold"
            android:includeFontPadding="false"
            android:text="식단 기록"
            android:textColor="@color/grey"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="356dp"
        android:layout_height="212dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.0">

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>